--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
     <link rel="stylesheet" href="./assets/css/master.css">
   </head>
   <body>
-    <header>
+    <header class="container">
       <nav>
         <div class="logo">
           <img src="./assets/img/logo.svg" alt="logo">
         </div>
-        <ul>
+        <ul class="left">
           <li><a href="#">Il metodo</a></li>
           <li><a href="#">La tecnologia</a></li>
           <li><a href="#">Real-life english</a></li>
           <li><a href="#">Soluzione generale</a></li>
+        </ul>
+
+        <ul class="right">
+          <li><a href="#">diventa un tutor</a></li>
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Struttura un piano</a></li>
+
         </ul>
       </nav>
     </header>
