--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
   </head>
   <body>
     <header class="container">
-      <nav>
+      di
         <div class="logo">
           <img src="./assets/img/logo.svg" alt="logo">
         </div>
-        <ul class="left">
-          <li><a href="#">Il metodo</a></li>
-          <li><a href="#">La tecnologia</a></li>
-          <li><a href="#">Real-life english</a></li>
-          <li><a href="#">Soluzione generale</a></li>
-        </ul>
-
-        <ul class="right">
-          <li><a href="#">diventa un tutor</a></li>
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Struttura un piano</a></li>
-
-        </ul>
-      </nav>
+        <div class="left">
+          <nav>
+            <ul>
+              <li><a href="#">Il metodo</a></li>
+              <li><a href="#">La tecnologia</a></li>
+              <li><a href="#">Real-life english</a></li>
+              <li><a href="#">Soluzione generale</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="right">
+          <nav>
+            <ul>
+              <li><a href="#">diventa un tutor</a></li>
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Struttura un piano</a></li>
+            </ul>
+          </nav>
+        </div>
     </header>
 
     <main>
