--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="./assets/css/master.css">
   </head>
   <body>
-    <header class="container">
-      di
+    <header>
+      <div class="container">
         <div class="logo">
           <img src="./assets/img/logo.svg" alt="logo">
         </div>
@@ -30,6 +30,10 @@
             </ul>
           </nav>
         </div>
+      </div>
+      <div class="jumbotron">
+        <img src="./assets/img/background-header.png" alt="bg-header">
+      </div>
     </header>
 
     <main>
