Text and button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       </div>
       <div class="jumbotron">
         <img src="./assets/img/background-header.png" alt="bg-header">
+        <h1 style="font-family: Arial">Scegli l'inglese studiato per i professionisti</h1>
+        <a href="#">Struttura un piano</a>
       </div>
     </header>
 
