--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
           <nav>
             <ul>
               <li><a href="#">diventa un tutor</a></li>
-              <li><a href="#">Login</a></li>
-              <li><a href="#">Struttura un piano</a></li>
+              <li><a class="login" href="#">Login</a></li>
+              <li><a class="struttura"href="#">Struttura un piano</a></li>
             </ul>
           </nav>
         </div>
       </div>
       <div class="jumbotron">
-        <img src="./assets/img/background-header.png" alt="bg-header">
         <h1 style="font-family: Arial">Scegli l'inglese studiato per i professionisti</h1>
-        <a href="#">Struttura un piano</a>
+        <a style="font-family: Arial" class="piano" href="#">Struttura un piano</a>
       </div>
     </header>
 
