--- a/index.html
+++ b/index.html
@@ -35,10 +35,26 @@
         <h1 style="font-family: Arial">Scegli l'inglese studiato per i professionisti</h1>
         <a style="font-family: Arial" class="piano" href="#">Struttura un piano</a>
       </div>
+      <div class="bg-lightgrey">
+        <h2>Le scuole di lingue tradizionale non sono efficaci</h2>
+        <p>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta</p>
+      </div>
     </header>
 
     <main>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-33">
+            <div id="profile">
+              <img src="./assets/img/profile.svg" alt="">
 
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
     </main>
 
     <footer></footer>
