--- a/index.html
+++ b/index.html
@@ -43,17 +43,41 @@
 
     <main>
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-33">
-            <div id="profile">
-              <img src="./assets/img/profile.svg" alt="">
-
+         <div class="row-1">
+           <!--inscatolamento per la parte 1 a sinistra -->
+          <div class="col-1">
+            <img src="./assets/img/profile.svg" alt="profile">
+            <h3>Piano formativo configurato sul proprio livello</h3>
+            <div id="linea-1">
             </div>
-
+            <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
           </div>
-
+          <!--inscatolamento per la parte 2 al centro -->
+          <div class="col-2">
+            <img src="./assets/img/computer.svg" alt="computer">
+            <h3>Affiancamento costante al tutor</h3>
+            <div id="linea-2">
+            </div>
+            <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
+          </div>
+          <!--inscatolamento per la parte 3 a destra -->
+          <div class="col-3">
+            <img src="./assets/img/doc.svg" alt="doc">
+            <h3>Monitora i tuoi progressi costantemente</h3>
+            <div id="linea-3">
+            </div>
+            <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
+          </div>
         </div>
-
+        <div class="row-2">
+          <div class="col-4">
+            <img src="./assets/img/mountain.svg" alt="mountain">
+          </div>
+          <div class="col-5">
+            <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
       </div>
     </main>
 
